apps/vaultwarden/vaultwarden-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
spec:
  routes:
    - match: Host(`vault.ieeetamu.org`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
